<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_toolbar_top_margin"
        android:orientation="vertical"
        android:padding="@dimen/layout_default_horizontal_padding"
        android:stretchColumns="1">

        <TableRow>

            <ImageView
                android:layout_width="@dimen/image_default_large_size"
                android:layout_height="@dimen/image_default_large_size"
                android:layout_column="0"
                android:scaleType="center"
                android:src="@mipmap/start_large_icon"/>

            <EditText
                android:id="@+id/fragment_publish_empty_car_start_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/layout_default_spacing"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:hint="@string/edit_start_hint"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_view_default_text_size"/>

        </TableRow>

        <TableRow
            android:layout_marginTop="@dimen/layout_default_spacing">

            <ImageView
                android:layout_width="@dimen/image_default_large_size"
                android:layout_height="@dimen/image_default_large_size"
                android:layout_column="0"
                android:scaleType="center"
                android:src="@mipmap/end_large_icon"/>

            <EditText
                android:id="@+id/fragment_publish_empty_car_end_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/layout_default_spacing"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:hint="@string/edit_end_hint"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_view_default_text_size"/>

        </TableRow>

        <TableRow android:layout_marginTop="@dimen/layout_default_spacing">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/fragment_publish_empty_car_back_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_back_car"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/fragment_publish_empty_car_favorable_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_favorable"/>
            </LinearLayout>
        </TableRow>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/fragment_publish_empty_car_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_button_size"
            android:layout_marginTop="@dimen/layout_default_vertical_margin"
            android:text="@string/publish_car_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_default_text_size"
            android:textStyle="bold"/>
    </TableLayout>

</LinearLayout>